fix jung book image

--- a/psych.html
+++ b/psych.html
@@ -68,7 +68,7 @@
                 <div class="resource-grid">
 
                     <div class="resource-card book-card">
-                        <img src="https://covers.openlibrary.org/b/id/8231837-M.jpg" alt="Man and His Symbols cover" class="book-cover">
+                        <img src="https://m.media-amazon.com/images/S/compressed.photo.goodreads.com/books/1348216902i/297554.jpg" alt="Man and His Symbols cover" class="book-cover">
                         <div class="book-content">
                             <h3><a href="https://www.goodreads.com/book/show/297554.Jung" target="_blank">Man and His Symbols</a></h3>
                             <p class="resource-description">
