add favicon to head

--- a/psych.html
+++ b/psych.html
@@ -6,6 +6,7 @@
     <title>Psych Resources - Patrick Taylor</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/psych.css">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
     <nav class="nav">
