--- a/art.html
+++ b/art.html
@@ -6,6 +6,7 @@
     <title>Art - Patrick Taylor</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/art.css">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
     <nav class="nav">
