--- a/index.html
+++ b/index.html
@@ -46,6 +46,21 @@
 
                     <div class="project-card">
                         <div class="project-header">
+                            <h3>Portfolio Sites</h3>
+                            <span class="project-tag">Web Dev</span>
+                        </div>
+                        <p class="project-description">
+                            Custom static websites with responsive galleries, dark mode, and optimized performance.
+                            Clean code, zero dependencies.
+                        </p>
+                        <div class="project-links">
+                            <a href="https://mucilage.net" target="_blank" class="link">mucilage.net</a>
+                            <a href="https://margaretbewley.com" target="_blank" class="link">margaretbewley.com</a>
+                        </div>
+                    </div>
+
+                    <div class="project-card">
+                        <div class="project-header">
                             <h3>NYC Median Income Visualization</h3>
                             <span class="project-tag">Data Viz</span>
                         </div>
@@ -55,21 +70,7 @@
                         </p>
                         <div class="project-links">
                             <a href="https://github.com/ptrcktylr/nyc-income" target="_blank" class="link">GitHub</a>
-                            <a href="#" class="link">View Live</a>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="project-header">
-                            <h3>Portfolio Sites</h3>
-                            <span class="project-tag">Web Dev</span>
-                        </div>
-                        <p class="project-description">
-                            Custom static websites with responsive galleries, dark mode, and optimized performance.
-                            Clean code, zero dependencies.
-                        </p>
-                        <div class="project-links">
-                            <a href="#" class="link">View Examples</a>
+                            <a href="https://nyc-income.onrender.com" target="_blank" class="link">View Live</a>
                         </div>
                     </div>
 
@@ -83,7 +84,8 @@
                             Django backend with PostgreSQL and AWS integration.
                         </p>
                         <div class="project-links">
-                            <a href="#" class="link">GitHub</a>
+                            <a href="https://github.com/ptrcktylr/splat-issue-tracker" target="_blank" class="link">GitHub</a>
+                            <a href="https://splat-issue-tracker.onrender.com" target="_blank" class="link">View Live</a>
                         </div>
                     </div>
 
@@ -97,7 +99,7 @@
                             Features posts, comments, friend connections, and image storage.
                         </p>
                         <div class="project-links">
-                            <a href="#" class="link">GitHub</a>
+                            <a href="https://github.com/ptrcktylr/odin-book" target="_blank" class="link">GitHub</a>
                         </div>
                     </div>
 
