Add untitled css

--- a/art.html
+++ b/art.html
@@ -1,67 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art - Patrick Taylor</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/art.css">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-</head>
-<body>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/art.css" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  </head>
+  <body>
     <nav class="nav">
-        <div class="nav-container">
-            <a href="index.html" class="logo">PT</a>
-            <ul class="nav-links">
-                <li><a href="index.html#work">work</a></li>
-                <li><a href="art.html">art</a></li>
-                <li><a href="resume.html">resume</a></li>
-                <li><a href="psych.html">psych</a></li>
-                <li><a href="index.html#about">about</a></li>
-                <li>
-                    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
-                        <span class="theme-icon">◐</span>
-                    </button>
-                </li>
-            </ul>
-        </div>
+      <div class="nav-container">
+        <a href="index.html" class="logo">PT</a>
+        <ul class="nav-links">
+          <li><a href="index.html#work">work</a></li>
+          <li><a href="art.html">art</a></li>
+          <li><a href="resume.html">resume</a></li>
+          <li><a href="psych.html">psych</a></li>
+          <li><a href="index.html#about">about</a></li>
+          <li>
+            <button
+              id="theme-toggle"
+              class="theme-toggle"
+              aria-label="Toggle dark mode"
+            >
+              <span class="theme-icon">◐</span>
+            </button>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <main class="art-page">
-        <div class="container">
-            <header class="page-header">
-                <h1>Art</h1>
-            </header>
+      <div class="container">
+        <header class="page-header">
+          <h1>Art</h1>
+        </header>
 
-            <div class="art-grid">
-                <div class="art-item">
-                    <img src="images/20260104151704_001.jpg" alt="Doodles 1, 2025" class="art-image" loading="lazy">
-                    <div class="art-caption">
-                        <p class="art-title">Doodles 1</p>
-                        <p class="art-year">2026</p>
-                        <p class="art-medium">Pencil and pen on paper</p>
-                    </div>
-                </div>
-
-                <div class="art-item">
-                    <img src="images/20260104144218_001.jpg" alt="Untitled, 2025" class="art-image" loading="lazy">
-                    <div class="art-caption">
-                        <p class="art-title">Untitled</p>
-                        <p class="art-year">2025</p>
-                        <p class="art-medium">Watercolor on paper</p>
-                    </div>
-                </div>
+        <div class="art-grid">
+          <div class="art-item">
+            <img
+              src="images/20260104151704_001.jpg"
+              alt="Doodles 1, 2025"
+              class="art-image"
+              loading="lazy"
+            />
+            <div class="art-caption">
+              <p class="art-title">Doodles 1</p>
+              <p class="art-year">2026</p>
+              <p class="art-medium">Pencil and pen on paper</p>
             </div>
+          </div>
+
+          <div class="art-item">
+            <img
+              src="images/20260104144218_001.jpg"
+              alt="Untitled, 2025"
+              class="art-image"
+              loading="lazy"
+            />
+            <div class="art-caption">
+              <p class="art-untitle">Untitled</p>
+              <p class="art-year">2025</p>
+              <p class="art-medium">Watercolor on paper</p>
+            </div>
+          </div>
         </div>
+      </div>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 Patrick Taylor</p>
-        </div>
+      <div class="container">
+        <p>&copy; 2026 Patrick Taylor</p>
+      </div>
     </footer>
 
     <script src="js/main.js"></script>
     <script src="js/art.js"></script>
-</body>
+  </body>
 </html>
