--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="hero-overlay"></div>
         <div class="hero-content">
           <h1>Patrick Taylor</h1>
-          <p class="subtitle">Ex software engineer</p>
+          <p class="subtitle">Freelance Fullstack Developer</p>
           <p class="location">Auckland, NZ / New York, NY</p>
         </div>
       </section>
@@ -151,16 +151,16 @@
           <h2 class="section-title">About</h2>
           <div class="about-content">
             <p>
-              Ex software engineer currently based in Auckland, NZ. Originally
-              from New York.
+              Freelance fullstack developer currently based in Auckland, NZ. Originally
+              from New York. Previously a software engineer at Equifax working on cloud platforms and reliability.
             </p>
             <p>
               I build things with code. Sometimes they're practical, sometimes
               they're experimental.
             </p>
             <p>
-              I'm pursuing psychiatry - psychology, psychedelic-assisted
-              therapy, understanding consciousness. This site will grow to
+              Future psychiatrist exploring psychology, psychedelic-assisted
+              therapy, and consciousness. This site will grow to
               include art, music, and recommended readings as I continue
               exploring what it means to create authentically.
             </p>
