--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
         <div class="container">
             <header class="resume-header">
                 <h1>Patrick Taylor</h1>
-                <p class="resume-tagline">Software Engineer — Cloud & Reliability</p>
+                <p class="resume-tagline">Freelance Fullstack Developer</p>
                 <div class="resume-contact">
                     <span>Auckland, New Zealand</span>
                     <span>•</span>
