Currently reading section

--- a/psych.html
+++ b/psych.html
@@ -37,6 +37,23 @@
             </header>
 
             <section class="content-section">
+                <h2>Currently Reading</h2>
+                <div class="resource-grid">
+
+                    <div class="resource-card book-card">
+                        <img src="https://m.media-amazon.com/images/I/71hQGLkkdPL._SY466_.jpg" alt="The Deep Self cover" class="book-cover">
+                        <div class="book-content">
+                            <h3><a href="https://www.goodreads.com/book/show/297556.The_Deep_Self" target="_blank">The Deep Self</a></h3>
+                            <p class="resource-description">
+                                John C. Lilly — exploration of consciousness, isolation tanks, and the inner landscape of the mind through scientific experimentation and introspection.
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="content-section">
                 <h2>Research & Articles</h2>
                 <div class="resource-grid">
 
