Refactor code structure for improved readability and maintainability

--- a/psych.html
+++ b/psych.html
@@ -46,7 +46,7 @@
           <div class="resource-grid">
             <div class="resource-card book-card">
               <img
-                src="https://m.media-amazon.com/images/I/71hQGLkkdPL._SY466_.jpg"
+                src="images/books/the-deep-self-lilly.jpg"
                 alt="The Deep Self cover"
                 class="book-cover"
               />
@@ -124,8 +124,8 @@
           <div class="resource-grid">
             <div class="resource-card book-card">
               <img
-                src="https://m.media-amazon.com/images/S/compressed.photo.goodreads.com/books/1348216902i/297554.jpg"
-                alt="Man and His Symbols cover"
+                src="images/books/jung-very-short-introduction.jpg"
+                alt="Jung: A Very Short Introduction cover"
                 class="book-cover"
               />
               <div class="book-content">
@@ -133,13 +133,11 @@
                   <a
                     href="https://www.goodreads.com/book/show/297554.Jung"
                     target="_blank"
-                    >Man and His Symbols</a
+                    >Jung: A Very Short Introduction</a
                   >
                 </h3>
                 <p class="resource-description">
-                  Carl Jung — an accessible introduction to analytical
-                  psychology, exploring archetypes, dreams, and the unconscious
-                  mind.
+                  Anthony Stevens — a lucid introduction to Jungian psychology, explaining the collective unconscious, archetypes, shadow, persona, anima, animus, and the individualization of the Self.
                 </p>
               </div>
             </div>
