Enhance SEO and metadata across multiple HTML files

--- a/art.html
+++ b/art.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Art - Patrick Taylor</title>
+    <title>Art - Patrick Taylor | Drawings & Creative Work</title>
+    <meta
+      name="description"
+      content="Art, drawings, and creative work by Patrick Taylor."
+    />
+    <meta
+      name="keywords"
+      content="art, drawings, watercolor, pencil drawings, creative work, Patrick Taylor art"
+    />
+    <meta name="author" content="Patrick Taylor" />
+    <link rel="canonical" href="https://ptrcktylr.com/art.html" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ptrcktylr.com/art.html" />
+    <meta property="og:title" content="Patrick Taylor — Art" />
+    <meta
+      property="og:description"
+      content="Art, drawings, and creative work by Patrick Taylor."
+    />
+    <meta
+      property="og:image"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/art.css" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
