--- a/index.html
+++ b/index.html
@@ -3,7 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patrick Taylor</title>
+    <title>Patrick Taylor — Freelance Fullstack Developer | Auckland, NZ</title>
+    <meta
+      name="description"
+      content="Freelance fullstack developer and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
+    />
+    <meta
+      name="keywords"
+      content="freelance developer, fullstack developer, web developer, backend developer, Auckland developer, New Zealand developer, Patrick Taylor"
+    />
+    <meta name="author" content="Patrick Taylor" />
+    <link rel="canonical" href="https://ptrcktylr.com/" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ptrcktylr.com/" />
+    <meta
+      property="og:title"
+      content="Patrick Taylor — Freelance Fullstack Developer"
+    />
+    <meta
+      property="og:description"
+      content="Freelance fullstack developer and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
+    />
+    <meta
+      property="og:image"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ptrcktylr.com/" />
+    <meta
+      property="twitter:title"
+      content="Patrick Taylor — Freelance Fullstack Developer"
+    />
+    <meta
+      property="twitter:description"
+      content="Freelance fullstack developer and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
+    />
+    <meta
+      property="twitter:image"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+    />
+
+    <!-- Structured Data / Schema.org -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Patrick Taylor",
+        "url": "https://ptrcktylr.com",
+        "image": "https://ptrcktylr.com/images/art/photos/IMG_0082.png",
+        "jobTitle": "Freelance Fullstack Developer",
+        "description": "Freelance fullstack developer and future psychiatrist",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Auckland",
+          "addressCountry": "NZ"
+        },
+        "email": "ptrcktylr@icloud.com",
+        "sameAs": ["https://github.com/ptrcktylr"],
+        "knowsAbout": [
+          "Web Development",
+          "Full Stack Development",
+          "Backend Development",
+          "Psychology",
+          "Psychiatry"
+        ]
+      }
+    </script>
+
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
@@ -151,8 +223,9 @@
           <h2 class="section-title">About</h2>
           <div class="about-content">
             <p>
-              Freelance fullstack developer currently based in Auckland, NZ. Originally
-              from New York. Previously a software engineer at Equifax working on cloud platforms and reliability.
+              Freelance fullstack developer currently based in Auckland, NZ.
+              Originally from New York. Previously a software engineer at
+              Equifax working on cloud platforms and reliability.
             </p>
             <p>
               I build things with code. Sometimes they're practical, sometimes
@@ -160,9 +233,9 @@
             </p>
             <p>
               Future psychiatrist exploring psychology, psychedelic-assisted
-              therapy, and consciousness. This site will grow to
-              include art, music, and recommended readings as I continue
-              exploring what it means to create authentically.
+              therapy, and consciousness. This site will grow to include art,
+              music, and recommended readings as I continue exploring what it
+              means to create authentically.
             </p>
             <div class="contact-links">
               <a href="mailto:ptrcktylr@icloud.com" class="link">Email</a>
