--- a/psych.html
+++ b/psych.html
@@ -3,7 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Psych Resources - Patrick Taylor</title>
+    <title>Psychology & Psychiatry Resources - Patrick Taylor</title>
+    <meta
+      name="description"
+      content="Research, books, and resources on consciousness, psychopathology, and psychedelic science."
+    />
+    <meta
+      name="keywords"
+      content="psychology, psychiatry, consciousness, psychedelic science, Jung, psychopathology, neuroscience"
+    />
+    <meta name="author" content="Patrick Taylor" />
+    <link rel="canonical" href="https://ptrcktylr.com/psych.html" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ptrcktylr.com/psych.html" />
+    <meta
+      property="og:title"
+      content="Patrick Taylor — Psychology & Psychiatry"
+    />
+    <meta
+      property="og:description"
+      content="Research, books, and resources on consciousness, psychopathology, and psychedelic science."
+    />
+    <meta
+      property="og:image"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/psych.css" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -137,7 +164,9 @@
                   >
                 </h3>
                 <p class="resource-description">
-                  Anthony Stevens — a lucid introduction to Jungian psychology, explaining the collective unconscious, archetypes, shadow, persona, anima, animus, and the individualization of the Self.
+                  Anthony Stevens — a lucid introduction to Jungian psychology,
+                  explaining the collective unconscious, archetypes, shadow,
+                  persona, anima, animus, and the individualization of the Self.
                 </p>
               </div>
             </div>
