--- a/resume.html
+++ b/resume.html
@@ -1,124 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume - Patrick Taylor</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/resume.css">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resume - Patrick Taylor | Freelance Fullstack Developer</title>
+    <meta
+      name="description"
+      content="Freelance fullstack developer with experience in cloud platforms, Java/Spring Boot, and GCP. Previously at Equifax."
+    />
+    <meta
+      name="keywords"
+      content="resume, CV, fullstack developer, Java, Spring Boot, GCP, Google Cloud, Equifax, cloud engineer"
+    />
+    <meta name="author" content="Patrick Taylor" />
+    <link rel="canonical" href="https://ptrcktylr.com/resume.html" />
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ptrcktylr.com/resume.html" />
+    <meta property="og:title" content="Patrick Taylor — Resume" />
+    <meta
+      property="og:description"
+      content="Freelance fullstack developer with experience in cloud platforms, Java/Spring Boot, and GCP. Previously at Equifax."
+    />
+    <meta
+      property="og:image"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+    />
+
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/resume.css" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  </head>
+  <body>
     <nav class="nav">
-        <div class="nav-container">
-            <a href="index.html" class="logo">PT</a>
-            <ul class="nav-links">
-                <li><a href="index.html#work">work</a></li>
-                <li><a href="art.html">art</a></li>
-                <li><a href="resume.html">resume</a></li>
-                <li><a href="psych.html">psych</a></li>
-                <li><a href="index.html#about">about</a></li>
-                <li>
-                    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode">
-                        <span class="theme-icon">◐</span>
-                    </button>
-                </li>
-            </ul>
-        </div>
+      <div class="nav-container">
+        <a href="index.html" class="logo">PT</a>
+        <ul class="nav-links">
+          <li><a href="index.html#work">work</a></li>
+          <li><a href="art.html">art</a></li>
+          <li><a href="resume.html">resume</a></li>
+          <li><a href="psych.html">psych</a></li>
+          <li><a href="index.html#about">about</a></li>
+          <li>
+            <button
+              id="theme-toggle"
+              class="theme-toggle"
+              aria-label="Toggle dark mode"
+            >
+              <span class="theme-icon">◐</span>
+            </button>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <main class="resume-page">
-        <div class="container">
-            <header class="resume-header">
-                <h1>Patrick Taylor</h1>
-                <p class="resume-tagline">Freelance Fullstack Developer</p>
-                <div class="resume-contact">
-                    <span>Auckland, New Zealand</span>
-                    <span>•</span>
-                    <a href="mailto:ptrcktylr@icloud.com">ptrcktylr@icloud.com</a>
-                    <span>•</span>
-                    <a href="https://github.com/ptrcktylr" target="_blank">github.com/ptrcktylr</a>
-                </div>
-            </header>
+      <div class="container">
+        <header class="resume-header">
+          <h1>Patrick Taylor</h1>
+          <p class="resume-tagline">Freelance Fullstack Developer</p>
+          <div class="resume-contact">
+            <span>Auckland, New Zealand</span>
+            <span>•</span>
+            <a href="mailto:ptrcktylr@icloud.com">ptrcktylr@icloud.com</a>
+            <span>•</span>
+            <a href="https://github.com/ptrcktylr" target="_blank"
+              >github.com/ptrcktylr</a
+            >
+          </div>
+        </header>
 
-            <section class="resume-section">
-                <h2>Professional Experience</h2>
+        <section class="resume-section">
+          <h2>Professional Experience</h2>
 
-                <div class="resume-item">
-                    <div class="resume-item-header">
-                        <div>
-                            <h3>Software Engineer (Intermediate)</h3>
-                            <p class="company">Equifax</p>
-                        </div>
-                        <div class="resume-date">
-                            <span>Jan 2024 – Jul 2025</span>
-                        </div>
-                    </div>
-                    <ul class="resume-list">
-                        <li>Worked on high-volume, regulated financial data platforms running on Google Cloud Platform</li>
-                        <li>Built and maintained Java/Spring Boot services and GCP data pipelines</li>
-                        <li>Resolved complex, customer-impacting production issues across distributed systems</li>
-                        <li>Contributed to system design, logging, and reliability improvements</li>
-                    </ul>
-                </div>
+          <div class="resume-item">
+            <div class="resume-item-header">
+              <div>
+                <h3>Software Engineer (Intermediate)</h3>
+                <p class="company">Equifax</p>
+              </div>
+              <div class="resume-date">
+                <span>Jan 2024 – Jul 2025</span>
+              </div>
+            </div>
+            <ul class="resume-list">
+              <li>
+                Worked on high-volume, regulated financial data platforms
+                running on Google Cloud Platform
+              </li>
+              <li>
+                Built and maintained Java/Spring Boot services and GCP data
+                pipelines
+              </li>
+              <li>
+                Resolved complex, customer-impacting production issues across
+                distributed systems
+              </li>
+              <li>
+                Contributed to system design, logging, and reliability
+                improvements
+              </li>
+            </ul>
+          </div>
 
-                <div class="resume-item">
-                    <div class="resume-item-header">
-                        <div>
-                            <h3>Software Engineer (Entry)</h3>
-                            <p class="company">Equifax</p>
-                        </div>
-                        <div class="resume-date">
-                            <span>Nov 2021 – Jan 2024</span>
-                        </div>
-                    </div>
-                    <ul class="resume-list">
-                        <li>Started in production support before transitioning into feature development</li>
-                        <li>Resolved 120+ production incidents, reducing downtime and data integrity failures</li>
-                        <li>Helped establish production support workflows and escalation paths</li>
-                        <li>Built backend features and a Dataflow pipeline for customer migrations</li>
-                    </ul>
-                </div>
-            </section>
+          <div class="resume-item">
+            <div class="resume-item-header">
+              <div>
+                <h3>Software Engineer (Entry)</h3>
+                <p class="company">Equifax</p>
+              </div>
+              <div class="resume-date">
+                <span>Nov 2021 – Jan 2024</span>
+              </div>
+            </div>
+            <ul class="resume-list">
+              <li>
+                Started in production support before transitioning into feature
+                development
+              </li>
+              <li>
+                Resolved 120+ production incidents, reducing downtime and data
+                integrity failures
+              </li>
+              <li>
+                Helped establish production support workflows and escalation
+                paths
+              </li>
+              <li>
+                Built backend features and a Dataflow pipeline for customer
+                migrations
+              </li>
+            </ul>
+          </div>
+        </section>
 
-            <section class="resume-section">
-                <h2>Education</h2>
+        <section class="resume-section">
+          <h2>Education</h2>
 
-                <div class="resume-item">
-                    <div class="resume-item-header">
-                        <div>
-                            <h3>B.S. Information Systems</h3>
-                            <p class="company">Stony Brook University</p>
-                        </div>
-                        <div class="resume-date">
-                            <span>2020</span>
-                        </div>
-                    </div>
-                </div>
-            </section>
+          <div class="resume-item">
+            <div class="resume-item-header">
+              <div>
+                <h3>B.S. Information Systems</h3>
+                <p class="company">Stony Brook University</p>
+              </div>
+              <div class="resume-date">
+                <span>2020</span>
+              </div>
+            </div>
+          </div>
+        </section>
 
-            <section class="resume-section">
-                <h2>Skills</h2>
-                <div class="skills-grid">
-                    <div>
-                        <h4>Languages & Frameworks</h4>
-                        <p>Java, Python, TypeScript, SQL | Spring Boot, Angular, Git, Jira</p>
-                    </div>
-                    <div>
-                        <h4>Google Cloud Platform</h4>
-                        <p>BigQuery, Firestore, Spanner, Pub/Sub, Dataflow, Logging</p>
-                    </div>
-                </div>
-            </section>
-        </div>
+        <section class="resume-section">
+          <h2>Skills</h2>
+          <div class="skills-grid">
+            <div>
+              <h4>Languages & Frameworks</h4>
+              <p>
+                Java, Python, TypeScript, SQL | Spring Boot, Angular, Git, Jira
+              </p>
+            </div>
+            <div>
+              <h4>Google Cloud Platform</h4>
+              <p>BigQuery, Firestore, Spanner, Pub/Sub, Dataflow, Logging</p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <p>&copy; 2026 Patrick Taylor</p>
-        </div>
+      <div class="container">
+        <p>&copy; 2026 Patrick Taylor</p>
+      </div>
     </footer>
 
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
