Update email address from iCloud to personal domain in contact sections

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           "addressLocality": "Auckland",
           "addressCountry": "NZ"
         },
-        "email": "ptrcktylr@icloud.com",
+        "email": "me@ptrcktylr.com",
         "sameAs": ["https://github.com/ptrcktylr"],
         "knowsAbout": [
           "Web Development",
@@ -238,7 +238,7 @@
               means to create authentically.
             </p>
             <div class="contact-links">
-              <a href="mailto:ptrcktylr@icloud.com" class="link">Email</a>
+              <a href="mailto:me@ptrcktylr.com" class="link">Email</a>
               <a
                 href="https://github.com/ptrcktylr"
                 target="_blank"
