--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
           <div class="resume-contact">
             <span>Auckland, New Zealand</span>
             <span>•</span>
-            <a href="mailto:ptrcktylr@icloud.com">ptrcktylr@icloud.com</a>
+            <a href="mailto:me@ptrcktylr.com">me@ptrcktylr.com</a>
             <span>•</span>
             <a href="https://github.com/ptrcktylr" target="_blank"
               >github.com/ptrcktylr</a
