Update Open Graph and Twitter metadata for improved clarity and consistency

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <meta property="og:url" content="https://ptrcktylr.com/" />
     <meta
       property="og:title"
-      content="Patrick Taylor — Freelance Fullstack Developer"
+      content="Patrick Taylor"
     />
     <meta
       property="og:description"
-      content="Freelance fullstack developer and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
+      content="Freelance Fullstack Developer | Web & Backend Development"
     />
     <meta
       property="og:image"
@@ -38,11 +38,11 @@
     <meta property="twitter:url" content="https://ptrcktylr.com/" />
     <meta
       property="twitter:title"
-      content="Patrick Taylor — Freelance Fullstack Developer"
+      content="Patrick Taylor"
     />
     <meta
       property="twitter:description"
-      content="Freelance fullstack developer and future psychiatrist based in Auckland, NZ. Previously software engineer at Equifax."
+      content="Freelance Fullstack Developer | Web & Backend Development"
     />
     <meta
       property="twitter:image"
@@ -106,7 +106,7 @@
       <section class="hero">
         <div class="hero-background">
           <img
-            src="images/20260104144218_001.jpg"
+            src="images/art/20260104144218_001.jpg"
             alt=""
             class="hero-art"
             loading="eager"
