Update image format from PNG to JPG for consistency across multiple HTML files

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -46,7 +46,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg"
     />
 
     <!-- Structured Data / Schema.org -->
@@ -56,7 +56,7 @@
         "@type": "Person",
         "name": "Patrick Taylor",
         "url": "https://ptrcktylr.com",
-        "image": "https://ptrcktylr.com/images/art/photos/IMG_0082.png",
+        "image": "https://ptrcktylr.com/images/art/photos/IMG_0082.jpg",
         "jobTitle": "Freelance Fullstack Developer",
         "description": "Freelance fullstack developer and future psychiatrist",
         "address": {
