--- a/psych.html
+++ b/psych.html
@@ -28,7 +28,7 @@
     />
     <meta
       property="og:image"
-      content="https://ptrcktylr.com/images/art/photos/IMG_0082.png"
+      content="https://ptrcktylr.com/images/art/photos/IMG_0082.jpg"
     />
 
     <link rel="stylesheet" href="css/styles.css" />
